--- a/Peace Foundation/css/style1.css
+++ b/Peace Foundation/css/style1.css
@@ -64,6 +64,52 @@ img{
 }
 
 
+/*-----------------------  about  --------------------------*/
+
+.section{
+    width: 100%;
+    min-height: 95vh;
+    background-color: #ddd;
+
+}
+.about-us{
+    width: 80%;
+    display: block;
+    margin: auto;
+    padding-top: 100px;
+}
+.content-section{
+    float: left;
+    width: 55%;
+}
+.image-section{
+    float: right;
+    width: 40%;
+
+}
+.image-section img{
+    width: 100%;
+    height: auto;
+}
+.content-section .title{
+    text-transform: uppercase;
+    font-size: 28px;
+
+}
+.content-section .content h3{
+    margin-top: 20px;
+    color: #5d5d5d;
+    font-size: 21px;
+}
+.content-section .content p{
+    margin-top: 10px;
+    font-family: sans-serif;
+    font-size: 18px;line-height: 1.5; }
+
+
+
+    
+
 
 
 /*--- flex box -----*/
@@ -277,4 +323,41 @@ font-weight: 700;
     }
     }
 
-
+   
+    @media screen and (max-width:768px) {
+        .about-us{
+            width: 80%;
+            display: block;
+            margin: auto;
+            padding-top: 50px;
+        }
+    
+        .content-section{
+            float: none;
+            width: 100%;
+            display: block;
+            margin: auto;
+        }
+    
+        .image-section{
+            float: none;
+            width: 100%;
+           
+        }
+        .image-section img{
+            display: block;
+            height: auto;
+            width: 100%;
+            margin: auto;
+            margin-top: 20px;
+            padding-bottom: 20px;
+            
+        
+        }
+        .content-section .title{
+            text-align: center;
+            font-size: 19px;
+        }
+        
+    
+    }
