--- a/Peace Foundation/views/login.ejs
+++ b/Peace Foundation/views/login.ejs
@@ -1,65 +1,5 @@
 <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
-<style type="text/css">
-    .container{
-       background:url('/img/loginpg.jpg')center/ cover fixed no-repeat;
-       font-family: 'Lora';
-       font-size: 1.5rem;
-    }
-    .card{
-        background: rgba(114, 111, 111, 0.5);
-        padding: 4rem 4rem;
-        margin-top: 2rem;
-        transition: all 1s ease-in-out;
-        border-radius: 20px;
-        height: 540px;
-        
-    }
-    .card:hover{
-        background-color: rgba(36, 31, 31, 0.801);
-        /* padding: 8rem 4rem; */
-    }
-    img{
-        widows: 100px;
-        height: 100px;
-        align-self: center;
-        margin-bottom: 2rem;
-    }
-    .btn{
-        background-color: rgba(52, 117, 170, 0.794);
-        padding: 0.5rem 0;
-        font-size: 1.5rem;
-        border-radius: 10px;
-    }
-    .btn:hover{
-        background-color: rgba(7, 153, 250, 0.904);
-    }
-    .btn:active{
-        transform: translateY(4px);
-    }
-    .btn1{
-    background-color: rgba(0, 127, 144, 0.705);
-    color: white;
-    position: absolute;
-    font-size: 1.2rem;
-    padding: 0.4rem 0.8rem;
-    right: 25px;
-    top: 25px;
-    border-radius: 8px;
-    border: none;
-    /* transition: all 0.7s ease-in-out; */
-    }
-    .btn1:hover{
-        text-decoration: none;
-        background-color: rgba(246, 1, 1, 0.924);
-        color: white;;
-        
-    }
-    .btn1:active{
-        background-color: #EB5757;
-        /* box-shadow: 0 5px #666; */
-        transform: translateY(4px);
-    }
-</style>
+<link rel="stylesheet" href="/css/lgn.css">
 
 <title>Login Page</title>
 <body class="container">
@@ -68,6 +8,9 @@
         <div class="col-md-6 m-auto">
             <div class="card card-body">
                 <img src="/img/padlock.svg" alt="">
+                 
+                <%- include('partials/messages'); %>
+               
                 <form action="/users/login" method="POST">
                     <div class="form-group">
                         <lable for="email" style="color: white"><b>Email</b></lable>
