--- a/Peace Foundation/views/register.ejs
+++ b/Peace Foundation/views/register.ejs
@@ -1,66 +1,5 @@
-
 <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
-<style type="text/css">
-    .container{
-        background: url('/img/rgpg3.jpg')center/cover fixed no-repeat;
-        font-family: 'Lora';
-    }
-    .card{
-        margin-top: 2rem;
-        background-color: rgba(93, 91, 91, 0.5);
-        border-radius: 20px;
-        transition: all 1s ease-in-out;
-    }
-    img{
-        
-        width: 7rem;
-        height: 7rem;
-        align-self: center;
-    }
-    .card:hover{
-        background-color: rgba(36, 32, 32, 0.8);
-    }
-    .btn{
-        font-size: 1.2rem;
-        padding: 0.8rem 3rem;
-        border-radius: 10px;
-    }
-    .btn{
-        background-color: rgba(202, 66, 66, 0.883);
-        /* transition: all 1s ease-in-out; */
-    }
-    .btn:hover{
-        background-color: rgb(214, 29, 13);
-    }
-    .btn:active{
-        transform: translateY(4px);
-    
-    }
-    .btn1{
-    background-color: rgba(0, 127, 144, 0.705);
-    color: white;
-    position: absolute;
-    font-size: 1.2rem;
-    padding: 0.4rem 0.8rem;
-    right: 25px;
-    top: 25px;
-    border-radius: 8px;
-    border: none;
-    /* transition: all 0.7s ease-in-out; */
-    }
-    .btn1:hover{
-        text-decoration: none;
-        background-color: rgba(246, 1, 1, 0.924);
-        color: white;;
-        
-    }
-    .btn1:active{
-        background-color: #EB5757;
-        /* box-shadow: 0 5px #666; */
-        transform: translateY(4px);
-    }
-</style>
-
+<link rel="stylesheet" href="../css/register.css">
 <title>Register Page</title>
 <body class="container">
     <a href="/" class="btn1"><b>Home</b></a>
@@ -68,36 +7,9 @@
         <div class="col-md-6 m-auto">
             <div class="card card-body">
                 <img src="/img/reglogo.png" alt="" >
-    <!-- or you can use (inclued ./partials/messages.ejs) will get same result -->
-                <% if(typeof errors != 'undefined'){ %>
-                    <% errors.forEach(function(error){ %>
-                        <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                            <%= error.msg %>
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                    <% }); %>
-                <% } %>
+    
+                <%- include('partials/messages'); %>
 
-                <% if(success_msg != ''){ %>
-                    <div class="alert alert-success alert-dismissible fade show" role="alert">
-                            <%= success_msg %>
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-            <% } %>
-
-            <% if(error_msg != ''){ %>
-                <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                        <%= error_msg %>
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-        <% } %>
-                
                 <form action="/users/register" method="POST">
                     <div class="form-group">
                         <label for="name" style="color: rgb(255, 255, 255);"><b>Full Name<b></label>
@@ -117,7 +29,7 @@
                           name="phone"
                           class="form-control"
                           placeholder="Enter Mobile Number"
-                          value="<%= typeof name != 'undefined' ? name: '' %>"/>
+                          value="<%= typeof phone != 'undefined' ? phone: '' %>"/>
                   </div>
 
                     <div class="form-group">
@@ -138,7 +50,7 @@
                           name="governmentIdName"
                           class="form-control"
                           placeholder="Enter Government ID Name"
-                          value="<%= typeof name != 'undefined' ? name: '' %>"/>
+                          value="<%= typeof governmentIdName != 'undefined' ? governmentIdName: '' %>"/>
                   </div>
                   <div class="form-group">
                     <label for="name" style="color: white">Government ID Number</label>
@@ -148,7 +60,7 @@
                         name="governmentIdNo"
                         class="form-control"
                         placeholder="Enter Government ID Number"
-                        value="<%= typeof name != 'undefined' ? name: '' %>"/>
+                        value="<%= typeof governmentIdNo != 'undefined' ? governmentIdNo: '' %>"/>
                 </div>
                     <div class="form-group">
                         <label for="password" style="color: white">Password</label>
@@ -168,7 +80,7 @@
                             id="password2"
                             class="form-control"
                             placeholder="Confirm Password"
-                            value="<%= typeof password != 'undefined' ? password: '' %>"/>
+                            value="<%= typeof password2 != 'undefined' ? password2: '' %>"/>
                     </div>
                     <button type="submit" class="btn btn-block" style="color: white; font-family: Lora">Register</button>
                 </form>
