--- a/Peace Foundation/css/style.css
+++ b/Peace Foundation/css/style.css
@@ -77,7 +77,7 @@ img{
 /*******************************/
 .gallery {
     position: relative;
-    padding: 25px 0 15px 0;
+    padding: 0px 0 15px 0;
 }
 
 .gallery #gallery-filter {
@@ -182,7 +182,7 @@ img{
 
 .section{
     width: 100%;
-    min-height: 90vh;
+    min-height: 120vh;
     background-color: #ddd;
 
 }
@@ -569,21 +569,81 @@ h5.modal-title {
     margin: auto;
   }
   
-  /* .modalFormWrapper {
-    padding: 2rem;
-  }  */
+  
+/* --------  testimonal CSS------------ */
 
-  /* .carousel-indicators{
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 2;
-    display: flex;
-    justify-content: center;
-    padding: 0;
-    margin-right: 15%;
-    margin-bottom: 1rem;
-    margin-left: 15%;
-    list-style: none;
-  } */
+.testimonal .container {
+    max-width: 950px;
+    padding-top: 50px;
+    padding-bottom: 30px;
+}
+.testimonal .container .title{
+    text-transform: uppercase;
+    font-size: 28px;
+    text-align: center;
+    padding-bottom: 30px;
+
+}
+
+.card {
+    border-radius: 1rem;
+    box-shadow: 0px -10px 0px #6abe8a
+    
+}
+
+.card {
+    background-color: #cffdcf;
+    
+}
+
+@media(max-width:767px) {
+    .card {
+        margin: 1rem 0.7rem 1rem;
+        max-width: 80vw
+    }
+}
+
+.card img {
+    width: 6.2rem;
+    border-radius: 5rem;
+    margin: 1.3rem auto 1rem auto
+}
+
+.col-md-4 {
+    padding: 0 0.5rem
+}
+
+.card-title {
+    font-size: 1rem;
+    margin-bottom: 0;
+    font-weight: bold;
+    font-family: 'IM Fell French Canon SC'
+}
+
+.card-text {
+    text-align: center;
+    padding: 1rem 2rem;
+    font-size: 0.8rem;
+    color: rgb(82, 81, 81);
+    line-height: 1.4rem
+}
+
+.test-footer {
+    border-top: none;
+    text-align: center;
+    line-height: 1.2rem;
+    padding: 2rem 0 1.4rem 0;
+    font-family: 'Varela Round'
+}
+
+#name {
+    font-size: 0.8rem;
+    font-weight: bold
+}
+
+#position {
+    font-size: 0.7rem
+}
+p{
+    margin: auto;
+}
